get html code based on user input URL

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kueimplementation",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/Rishabhravindra/kueimplementation.git"
   },
-  "author": "Rishabh",
-  "license": "MIT",
+  "author": "Rishabh Ravindra",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Rishabhravindra/kueimplementation/issues"
   },
