--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kueimplementation",
   "version": "0.0.1",
-  "description": "",
+  "description": "Simple program to add jobs to queues and stores job status in a db.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,13 +17,9 @@
   },
   "homepage": "https://github.com/Rishabhravindra/kueimplementation#readme",
   "dependencies": {
-    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
-    "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
-    "express-session": "^1.15.1",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.0",
     "monq": "^0.3.7",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta11",
