--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
+    "mongoose": "^4.9.5",
     "monq": "^0.3.7",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta11",
