--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.5",
     "monq": "^0.3.7",
-    "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
